--- a/brasileio.html
+++ b/brasileio.html
@@ -10,7 +10,7 @@
 <body>
     <section>
     <nav class="topo">
-        <a class="paginicial" href="./pag_inicial.html">Timão Shop</a>
+        <a class="paginicial" href="./index.html">Timão Shop</a>
         
         <a class="iniciar" href="./pag_conta.html"><img class="conta" src="./img/icons8-usuário-homem-com-círculo-48.png" alt=""></a>
         <a class="carrinho" href="./carrinho.html"><img class="carro" src="./img/icons8-carrinho-de-compras-50 (1).png" alt=""><img class="qtd" src="./img/icons8-0-50.png" alt=""></a>
