--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timão Shop</title>
-    <link rel="stylesheet" href="./pag_inicial.css">
+    <link rel="stylesheet" href="./index.css">
     <link class="loginho" rel="ShortCut icon" href="img/Corinthians.webp">
 </head>
 <body>
     <section>
     <nav class="topo">
-        <a class="paginicial" href="./pag_inicial.html">Timão Shop</a>
+        <a class="paginicial" href="./index.html">Timão Shop</a>
         <input class="pesquisar" type="text" placeholder="O que vai procurar hoje?"><img class="lupa" src="./img/icons8-search-50 (1).png" alt="">
         <a class="iniciar" href="./pag_conta.html"><img class="conta" src="./img/icons8-usuário-homem-com-círculo-48.png" alt=""></a>
         <a class="carrinho" href="./carrinho.html"><img class="carro" src="./img/icons8-carrinho-de-compras-50 (1).png" alt=""><img class="qtd" src="./img/icons8-0-50.png" alt=""></a>
