--- a/pag_conta.html
+++ b/pag_conta.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="topo">
-        <a class="paginicial" href="./pag_inicial.html">Timão Shop</a>
+        <a class="paginicial" href="./index.html">Timão Shop</a>
         <h2 class="login">Pagina de Login</h2>
     </nav>
     <section class="partedebaixo">
