--- a/carrinho.html
+++ b/carrinho.html
@@ -9,11 +9,11 @@
 </head>
 <body>
      <nav class="topo">
-        <a class="paginicial" href="./pag_inicial.html">Timão Shop</a>
+        <a class="paginicial" href="./index.html">Timão Shop</a>
         <h2 class="seucarro">Seu Carrinho</h2>
     </nav>
     <img class="carroimg"  src="./img/icons8-carrinho-de-compras-64 (1).png" alt="">
     <h3 class="vazio">Seu Carrinho esta vazio</h3>
-    <a class="volt" href="./pag_inicial.html"><button>Escolher produtos</button></a>
+    <a class="volt" href="./index.html"><button>Escolher produtos</button></a>
 </body>
 </html>
