--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <body>
     <section>
     <nav class="topo">
+        <div class="pretobala">
         <a class="paginicial" href="./index.html">Timão Shop</a>
         <input class="pesquisar" type="text" placeholder="O que vai procurar hoje?"><img class="lupa" src="./img/icons8-search-50 (1).png" alt="">
         <a class="iniciar" href="./pag_conta.html"><img class="conta" src="./img/icons8-usuário-homem-com-círculo-48.png" alt=""></a>
         <a class="carrinho" href="./carrinho.html"><img class="carro" src="./img/icons8-carrinho-de-compras-50 (1).png" alt=""><img class="qtd" src="./img/icons8-0-50.png" alt=""></a>
+    </div>
     </nav>
     </section>
     
